--- a/frontend/scripts/docker-buildfiles/Dockerfile
+++ b/frontend/scripts/docker-buildfiles/Dockerfile
@@ -1,8 +1,8 @@
-FROM archlinux/archlinux:base-devel as builder
+FROM rust/rust:1.59-alpine as builder
 
-RUN pacman -Syy
-
-RUN pacman -Syu --needed --noconfirm git xdg-user-dirs
+RUN apk update
+RUN apk add git xdg-user-dirs curl base-devel sqlite openssl clang cmake ninja pkg-config gtk3 unzip
+# clean
 
 # makepkg user and workdir
 ARG user=makepkg
@@ -12,14 +12,7 @@ RUN useradd --system --create-home $user \
 USER $user
 WORKDIR /home/$user
 
-# Install yay
-RUN git clone https://aur.archlinux.org/yay.git \
-  && cd yay \
-  && makepkg -sri --needed --noconfirm
-
-RUN yay -S --noconfirm curl base-devel sqlite openssl clang cmake ninja pkg-config gtk3 unzip
 RUN xdg-user-dirs-update
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 RUN source $HOME/.cargo/env && rustup toolchain install stable && rustup default stable
 RUN git clone https://github.com/flutter/flutter.git $HOME/.local/flutter
 RUN flutter channel stable
@@ -40,9 +33,7 @@ CMD ["/home/makepkg/appflowy/frontend/app_flowy/build/linux/x64/release/bundle/a
 #################
 FROM archlinux/archlinux
 
-RUN pacman -Syy && \
-    pacman -Syu --needed --noconfirm xdg-user-dirs && \
-    pacman -Scc --noconfirm
+RUN apk add --nocache xdg-user-dirs
 RUN xdg-user-dirs-update
 
 COPY --from=builder /usr/sbin/yay /usr/sbin/yay
